# attachment-style

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  LISCENCE  README.md  docker-compose.yml  entrypoint.sh  fly.toml  init.sql  pyproject.toml  release-tasks.sh  requirements.txt  seed_data.py  todos.md  wait-for-db.py
.github/workflows/: fly-deploy.yml
attachment_style/: alembic.ini  anxious_questions.txt  api.py  app.py  app_revised.py  app_shell.py  attachment_style_api.py  attachment_style_test.py  avoidant_questions.txt  constants.py  dash_app.py  dash_mantine_app.py  dashboard.py  description.py  fly.toml  header.py  mockup.py  models.py  mydatabase.db  navbar.py  question_card.py  requirements.txt  secure_questions.txt  test.html
attachment_style/alembic/: env.py
attachment_style/assets/: avoidant_questions.txt  secure_questions.txt  style.css
attachment_style/assets_out_for_now/: style.css
attachment_style/callbacks/: clear_state_callbacks.py  feedback_callbacks.py  screensize.py  theme.py  theme_callbacks.py
attachment_style/components/: box_modal.py  box_plot.py  chart.py  chart_others.py  dashboard.py  dashboard_partner.py  debug_footer.py  debugger.py  debugging_table.py  demographics.py  demographics_questionnaire.py  demographics_questionnaire_others.py  demographics_questionnaire_revised.py  description.py  dummy.py  dummy_components.py  footer.py  header.py  header_component.py  header_revised.py  histogram_plot.py  navbar.py  navbar_mantine.py  parallel_plot.py  personal_questionnaire.py  personal_questionnaire_partner.py  pie_plot.py  question_card.py  question_card_component.py  question_card_others.py  question_card_partner.py  question_card_revised.py  results.py  results_chart.py  results_chart_others.py  results_revised.py  (+8 more)
src/: alembic.ini  app.py  models.py  requirements.txt
tests/: test_2d_plot.py  test_plot.py  test_plots.py
(+112 files in other folders)
