[tool.poetry]
name = "attachment-style"
version = "0.1.0"
description = ""
authors = ["Matvei Kotenev <matvei.kotenev@hh2e.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
plotly = "^5.21.0"
pytest = "^8.2.0"
pandas = "^2.2.2"
nbformat = ">=4.2.0"
dash-bootstrap-components = "^1.6.0"
dash-mantine-components = "^0.14.3"
dash-iconify = "^0.1.2"
reportlab = "^4.2.2"
kaleido = "0.1.0.post1"
fpdf = "^1.7.2"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
